updated Dependencies and own version

--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -3,7 +3,7 @@ vagrantfile-local:
     vm:
         box: puphpet/ubuntu1404-x64
         box_url: puphpet/ubuntu1404-x64
-        hostname: 'tyche'
+        hostname: 'log4js-syslog-appender'
         memory: '1024'
         cpus: '1'
         chosen_provider: virtualbox
